# Raytracer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  image.h  main.cc
src/libs/: CMakeLists.txt  camera.cc  camera.h  image.cc  image.h  light.cc  light.h  object.cc  object.h  ray.cc  ray.h  scene.cc  scene.h  vector3.cc  vector3.h
tests/: CMakeLists.txt  test_camera.cc  test_image.cc  test_light.cc  test_object.cc  test_ray.cc  test_scene.cc  test_vector3.cc
